# ckanext-language-domains

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: flake8.yml  pyright.yml
ckanext/: __init__.py
ckanext/language_domains/: blueprint.py  config_declaration.yaml  helpers.py  logic.py  middleware.py  patched.py  plugin.py  utils.py  validators.py
ckanext/language_domains/assets/: webassets.yml
ckanext/language_domains/assets/scripts/: language_domains.js  language_login_receiver.js  language_login_sender.js  language_logout_receiver.js  language_logout_sender.js
ckanext/language_domains/assets/styles/: language_domains.css
ckanext/language_domains/templates/user/: language_login.html  language_login_receiver.html  language_login_sender.html  language_logout_receiver.html  language_logout_sender.html
