[metadata]
name = ckanext-language-domains
version = 0.0.1
description = CKAN plugin to allow for different domains per language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JVickery-TBS/ckanext-language-domains
author = Jesse Vickery
author_email = jesse.vickery@tbs-sct.gc.ca
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN i18n language domains

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             language_domains = ckanext.language_domains.plugin:LanguageDomainsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/language_domains/i18n/ckanext-language-domains.pot
width = 80

[init_catalog]
domain = ckanext-language-domains
input_file = ckanext/language_domains/i18n/ckanext-language-domains.pot
output_dir = ckanext/language_domains/i18n

[update_catalog]
domain = ckanext-language-domains
input_file = ckanext/language_domains/i18n/ckanext-language-domains.pot
output_dir = ckanext/language_domains/i18n
previous = true

[compile_catalog]
domain = ckanext-language-domains
directory = ckanext/language_domains/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini

[flake8]
max-complexity = 100
max-line-length = 88
count = true
exit-zero = true
statistics = true
